--- a/public/css/plugin-name-public.css
+++ b/public/css/plugin-name-public.css
@@ -2,33 +2,46 @@
  * All of the CSS for your public-facing functionality should be
  * included in this file.
  */
- .divider-text {
-    position: relative;
-    text-align: center;
-    margin-top: 15px;
-    margin-bottom: 15px;
-  }
-  .divider-text span {
-    padding: 7px;
-    font-size: 12px;
-    position: relative;   
-    z-index: 2;
-  }
-  .divider-text:after {
-    content: "";
-    position: absolute;
-    width: 100%;
-    border-bottom: 1px solid #ddd;
-    top: 55%;
-    left: 0;
-    z-index: 1;
-  }
-  
-  .btn-facebook {
-    background-color: #405D9D;
-    color: #fff;
-  }
-  .btn-twitter {
-    background-color: #42AEEC;
-    color: #fff;
-  }
+.divider-text {
+  position: relative;
+  text-align: center;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.divider-text span {
+  padding: 7px;
+  font-size: 12px;
+  position: relative;
+  z-index: 2;
+}
+.divider-text:after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  border-bottom: 1px solid #ddd;
+  top: 55%;
+  left: 0;
+  z-index: 1;
+}
+
+.btn-facebook {
+  background-color: #405d9d;
+  color: #fff;
+}
+.btn-twitter {
+  background-color: #42aeec;
+  color: #fff;
+}
+
+.registration-error {
+  color: red;
+  text-align: center;
+  font-weight: bold;
+  margin: 20px 0;
+}
+
+.submit-registration.loading {
+  opacity: 0.7;
+  cursor: wait;
+  pointer-events: none;
+}
