--- a/public/css/plugin-name-public.css
+++ b/public/css/plugin-name-public.css
@@ -33,14 +33,16 @@
   color: #fff;
 }
 
-.registration-error {
+.registration-error,
+.login-error {
   color: red;
   text-align: center;
   font-weight: bold;
   margin: 20px 0;
 }
 
-.submit-registration.loading {
+.submit-registration.loading,
+.submit-login.loading {
   opacity: 0.7;
   cursor: wait;
   pointer-events: none;
