--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -259,3 +259,108 @@ input[type="text"] {
     font-size: 18px;
   }
 }
+body {font-family: Arial;}
+.containert{
+  height: 100%;
+  width: 600px;
+  top: 10;
+  left: 0;
+}
+/* Style the tab */
+.tabs {
+
+  width: 600px;
+  background-color: rgba(163, 159, 159, 0.692);
+  border-radius: 5px 5px 5px 5px;
+}
+ul#tabs-nav {
+  list-style: none;
+  margin: 0;
+  padding: 5px;
+  overflow: auto;
+}
+ul#tabs-nav li {
+  float: left;
+  font-weight: bold;
+  margin-right: 2px;
+  padding: 8px 10px;
+  border-radius: 5px 5px 5px 5px;
+  /*border: 1px solid #d5d5de;
+  border-bottom: none;*/
+  cursor: pointer;
+}
+ul#tabs-nav li:hover,
+ul#tabs-nav li.active {
+  background-color:rgba(0, 0, 0, 0.329);
+}
+#tabs-nav li a {
+  text-decoration: none;
+  color: #FFF;
+}
+.tab-content {
+  padding: 10px;
+  border: 5px solid #fdfafa;
+  background-color: #FFF;
+}
+
+/* Just for CodePen styling - don't include if you copy paste */
+/*style accordion*/
+   .w3-container{
+     width: 30%;
+   }
+   .accordion {
+  background-color: #eee;
+  color: black;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: solid;
+  border-color:white;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+  
+}
+
+.active, .accordion:hover {
+  background-color: #ccc;
+  
+}
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: max-height 0.2s ease-out;
+}
+/*slideshow in the ta1 style */
+
+.main-display{
+  margin-right: 50px;
+            /* Same as the width of the sidenav */
+         /*  font-size: 20px;
+            /* Increased text to enable scrolling */
+            padding: 15px 15px;
+}
+.h1{
+  font-size: 30px;
+  color:black;
+}
+.h2title{
+ 
+    color: #000000;
+    font-size: 65px;
+    font-weight: 600;
+    text-shadow: 4px 0px 3px rgb(0 0 0 / 30%);
+
+}
+.parent {
+  display: flex;
+  flex-direction:row;
+}
+
+.column {
+  flex: 1 1 0px;
+  border: 1px solid white;
+}
