--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -335,7 +335,21 @@ ul#tabs-nav li.active {
   transition: max-height 0.2s ease-out;
 }
 /*slideshow in the ta1 style */
+#slideshow { 
+  margin: 50px auto; 
+  position: relative; 
+  width: 500px; 
+  height: 500px; 
+  padding: 10px; 
+}
 
+#slideshow > div { 
+  position: absolute; 
+  top: 10px; 
+  left: 10px; 
+  right: 10px; 
+  bottom: 10px; 
+}
 .main-display{
   margin-right: 50px;
             /* Same as the width of the sidenav */
