--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -47,10 +47,7 @@
   cursor: wait;
   pointer-events: none;
 }
-.my_kws {
-  display: inline;
-  column-gap: 3px;
-}
+
 
 .fa-user-o {
   margin-left: 300px;
@@ -367,6 +364,18 @@ ul#tabs-nav li.active {
   font-weight: 600;
   text-shadow: 4px 0px 3px rgb(0 0 0 / 30%);
 }
+input[name=dtitle] {
+  color: #000000;
+  font-size: 65px;
+  font-weight: 600;
+  text-shadow: 4px 0px 3px rgb(0 0 0 / 30%);
+}
+.h2 input{
+  color: #000000;
+  font-size: 65px!important;
+  font-weight: 600!important;
+  text-shadow: 4px 0px 3px rgb(0 0 0 / 30%);
+}
 .parent {
   display: flex;
   flex-direction: row;
@@ -544,7 +553,8 @@ img {
   -moz-box-sizing: border-box;
   box-sizing: border-box;
 }
-.thumbnail1 img {
+
+.thumbnail1 .category__01 {
   /* fill: #c7c4c4;*/
   height: 200px;
   width: 100%;
@@ -639,3 +649,41 @@ img {
 .myinp {
   width: 30.33%;
 }
+/*-------------------sigle css------------*/
+.hidden { display: none;
+}
+/*error message bar*/
+.error-msg1 {
+  width:100%;
+  color: #D8000C;
+  background-color: #FFBABA;
+  margin: 10px 0;
+  padding: 10px;
+  border-radius: 4px 4px 4px 4px;
+  text-align:center;
+}
+/*close button*/
+.close {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  right: 0%;
+  padding: 12px 16px;
+  transform: translate(0%, -50%);
+}
+
+.close:hover {background: #bbb;}
+
+/*edit accordition button*/
+.edit2{
+   
+    color:black;
+      background:none;
+      border: none;
+      color: black;
+      padding: 12px 16px;
+      font-size: 16px;
+      cursor: pointer;
+    
+}
+
