--- a/public/css/policycloud-marketplace-public.css
+++ b/public/css/policycloud-marketplace-public.css
@@ -1086,6 +1086,7 @@ p {
 }
 
 .policycloud-marketplace form input,
+.policycloud-marketplace form textarea,
 .policycloud-marketplace form select {
   display: block;
   font-size: 16px;
